# icr-viz

./: .gitignore  README.md  index.html  package.json  pyproject.toml  run-backend.py
__legacy_code__/: icr-config.json  package-lock.json  vite.config.ts
__legacy_code__/exports/physical/: merged-physical-cleaned-2604122206.json
__legacy_code__/src/: types.ts
__legacy_code__/src/components/: ClusterProjection.tsx  DatasetOverview.tsx  HarmonicVisualizer.tsx  Settings.tsx  TensionGraph.tsx
apps/api/: pyproject.toml
apps/api/piano_web/: __init__.py  anchor_repository.py  db.py  dependencies.py  icr_process.py  logging_config.py  main.py  midi_bridge.py  repository.py  schemas.py  settings.py  workers.py
apps/api/piano_web/routers/: anchors.py  banks.py  export.py  icr.py  integrity.py  math_analysis.py  midi.py  ops.py  settings.py  spline_transfer.py  surface.py  tone_ops.py
apps/api/tests/: test_anchor_api.py  test_anchor_repository.py  test_api.py  test_db.py  test_i5_api.py  test_math_analysis_api.py  test_midi_api.py  test_midi_encoding.py  test_repository.py  test_settings.py  test_spline_transfer_api.py  test_tone_api.py
apps/web/: package-lock.json  package.json  vite.config.ts
docs/: qa-checklist-i1.md
idea/: i1.md  i2.md  i3.md  i4.md  i5.md  piano_diagrams.html  piano_spec_v0_3.html
scripts/: calibrate_sigma0.py  check_note_vel_key.py  ingest_idea_banks.py  verify_midi_pipe.py
src/: App.tsx  index.css  types.ts
src/components/: PhysicalVisualizer.tsx  SystemGuide.tsx
src/lib/: analysis.ts
src/workers/: computation.worker.ts
(+25 files in other folders)
